[gd_scene load_steps=3 format=3 uid="uid://crynbkg8m246g"]

[ext_resource type="Script" uid="uid://dn7s4gou84l3w" path="res://assets/arts_graphic/ui/menu/propertie.gd" id="1_lewet"]
[ext_resource type="Texture2D" uid="uid://bmbjdolg14ihw" path="res://icon.svg" id="2_h5i41"]

[node name="Propertie" type="HBoxContainer"]
custom_minimum_size = Vector2(300, 30)
offset_right = 600.0
offset_bottom = 30.0
size_flags_vertical = 0
theme_override_constants/separation = 10
script = ExtResource("1_lewet")
control_mode = 1

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme_override_font_sizes/font_size = 26
text = "Name"

[node name="Control" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="HSlider" type="HSlider" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
editable = false

[node name="CheckBox" type="CheckBox" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionButton" type="OptionButton" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
disabled = true

[node name="NumHintControl" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15

[node name="NumHint" type="Label" parent="NumHintControl"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15
text = "69%"

[node name="ResetButtonControl" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="ResetButton" type="TextureButton" parent="ResetButtonControl"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.08
disabled = true
texture_normal = ExtResource("2_h5i41")
ignore_texture_size = true
stretch_mode = 4
